--- a/index.html
+++ b/index.html
@@ -37,19 +37,8 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy offline website maker software</a></section><footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-1" style="background-color: rgb(68, 68, 68);">
-    
-    <div class="mbr-section__container container">
-        <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 36.900000000000006px; padding-bottom: 36.900000000000006px;">
-            <div class="col-sm-12">
-                <p class="mbr-footer__copyright">Copyright (c) 2017 McMullin Specialties. &nbsp;Site Designed by Pluto Apps LLC.&nbsp;</p>
-            </div>
-        </div>
-    </div>
-</footer>
 
-
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap web maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
